# ST7789-LVGL-Demo

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/inc/: main.h
app/src/: main.c
vscode-build-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
vscode-build-cmake/.cmake/api/v1/reply/: cache-v2-3b97304f9ecd9660a72a.json  cache-v2-a5bce5bc8270a729c821.json  cmakeFiles-v1-2b372cb93445c4546a2d.json  cmakeFiles-v1-ae70f2f145d11c139766.json  codemodel-v2-5321fb722918243a1508.json  codemodel-v2-b1d90709981db75fb716.json  codemodel-v2-f0044b1c3b06522ba045.json  directory-pico-sdk-Debug-31489afc19f2d726bb62.json  directory-pico-sdk.docs-Debug-fe54347564f339c010a9.json  (+103 more)
vscode-build-cmake/app/: Makefile  cmake_install.cmake  st7789_lvgl_demo.elf  st7789_lvgl_demo.elf.map  st7789_lvgl_demo.hex  st7789_lvgl_demo.uf2
vscode-build-cmake/app/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
vscode-build-cmake/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
vscode-build-cmake/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/docs/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/src/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/src/common/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
vscode-build-cmake/pico-sdk/tools/: Makefile  cmake_install.cmake
(+154 files in other folders)
